# Arkapp

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/ark/ark/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: RecEngine.cpp  RecEngine.h  jni-bridge.cpp  jni_bridge.cpp
app/src/main/java/ark/ark/: AFile.java  AFileDao.java  AppDatabase.java  Base.java  FileFragment.java  FileInfo.java  FileRepository.java  FileViewModel.java  Help.java  MainActivity.java  Manage.java  MyRecyclerAdapter.java  NameConvDialogFragment.java  RecEngine.java  Settings.java  ShareConvDialogFragment.java
app/src/main/res/drawable/: border.xml  border_del.xml  border_white.xml  launch_screen.xml  plain_square.xml  recview_background.xml  transtext.xml
app/src/main/res/layout/: activity_base.xml  activity_fileinfo.xml  activity_main.xml  activity_manage.xml  file_view.xml  recyclerview_row.xml
app/src/main/res/menu/: menu_file.xml  menu_main.xml  menu_manage.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/ark/ark/: ExampleUnitTest.java
debug-utils/: logging_macros.h  trace.cpp
fingerless/: CMakeLists.txt  build.gradle
fingerless/src/main/: AndroidManifest.xml
fingerless/src/main/cpp/: RecEngine.cpp  jni-bridge.cpp
fingerless/src/main/java/fingerless/fingerless/: AFile.java  AFileDao.java  AppDatabase.java  Base.java  FileInfo.java  FileRepository.java  FileViewModel.java  MainActivity.java  Manage.java  MyRecyclerAdapter.java  RecEngine.java  Settings.java  ShareConvDialogFragment.java
fingerless/src/main/res/drawable/: imagebutton_border.xml  launch_screen.xml  recview_background.xml
fingerless/src/main/res/layout/: activity_help.xml  activity_settings.xml  dialog_namefile.xml
fingerless/src/main/res/menu/: menu_navig.xml
fingerless/src/main/res/values/: preloaded_fonts.xml  strings.xml  styles.xml
fingerless/src/main/res/xml/: filepaths.xml  searchable.xml
gradle/wrapper/: gradle-wrapper.properties
typefree/: CMakeLists.txt  build.gradle
typefree/src/main/: AndroidManifest.xml
typefree/src/main/cpp/: RecEngine.cpp  RecEngine.h  jni-bridge.cpp
typefree/src/main/java/typefree/typefree/: AFile.java  AFileDao.java  AppDatabase.java  Base.java  CursorCallback.java  DivItem.java  EditTextCursorListener.java  FileInfo.java  FileRepository.java  FileViewModel.java  KeyboardHeightObserver.java  KeyboardHeightProvider.java  ListItem.java  MainActivity.java  MainFragment.java  Manage.java  ManageFragment.java  MyRecyclerAdapter.java  RecEngine.java  Settings.java  ShareConvDialogFragment.java  TipDialog.java
typefree/src/main/res/color/: bot_nav_item.xml
typefree/src/main/res/drawable/: border.xml  cardview_background.xml  colorcursor.xml  dialog_bg.xml  launch_screen.xml  mediaplayer_backg.xml  tick.xml  title_background.xml  transtext.xml
typefree/src/main/res/layout/: activity_fileinfo.xml  activity_main.xml  activity_manage.xml  dialog.xml  divider.xml  fragment_fileinfo.xml  fragment_main.xml  fragment_manage.xml  fragment_settings.xml  recyclerview_row.xml
typefree/src/main/res/menu/: menu_file.xml  menu_fileinternal.xml  menu_navig.xml
typefree/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
typefree/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
typefree/src/main/res/xml/: filepaths.xml
